* Added nanomsg dependencies to PKGBUILD files.
* Added clean tear-down and start-up to Server.
* Added frame counter to Server.
* Improved Viewer and Server communication.
* Removed unused includes.
* Fixed frame counting in ActionSender.
* Fixed message encoding.
* Fixed connection issues.
* Added heartbeat sending to clients.
* Added heartbeat receiving and timeout to Server.

SphereSim 3.0.3:
* Removed custom Array class, replaced by std::vector.
* Improved coding style.
* Removed empty SimulatedSystemActions.
* Fixed small error.
* Switched to spaces indentation.
* Added exception handling to main functions.
* Updated readme file.
* Updated git repo link in PKGBUILDs and fixed version.
* Replaced QList by std::vector and std::list.
* Updated ActionServer and ActionSender to use C string address parameter.
* Updated local includes to use double quotes.
* Replaced Qt integral types by standard types.
* Replaced QByteArray by std::string.
* Moved SphereTransmit functions to its own source file.
* Updated Object class to use SphereTransmit functions.
* Renamed SphereTransmit to DataTransmit.
* Moved message encapsulation and encoding to MessageTransmitter class.
* Improved exception handling.
* Switched to custom hexadecimal message encoding.
* Removed QStringList occurrences.
* Removed unused include files.
* Improved Console to use mutex locked std::cout output.
* Moved Console code from header to source file.
* Improved way of setting console color.
* Improved code style.
* Improved console output and removed QDebug occurrences.
* Improved console output formatting using field width.
* Fixed missing break in switch.
* Added comparable score to Benchmark.
* Added a vector proxy class forwarding to Eigen.
* Replaced all arithmetic by assignment vector operations.
* Replaced Eigen library by custom vector implementation.
* Removed Eigen dependency occurrences.
* Added macros and assertions to TwoDimArray class.